# xx-hash

./: Cargo.toml  LICENSE
src/: const_buffer.rs  lib.rs  xxhash32.rs  xxhash64.rs
tests/: xx_hash_tests.rs
