[package]
name = "xx-hash"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "xxHash implementation"
authors = ["mztikk <mztikk@outlook.de>"]
repository = "https://github.com/mztikk/xx-hash"
homepage = "https://github.com/mztikk/xx-hash"
tags = ["hash", "xxhash"]

[dev-dependencies]
rand = "0.8.5"
